use writeString